src/views/MyProfile/myProfile.scss
@import '../../vars';

@media (min-width: $break-xs) {
  .contact-grid {
    align-content: center;
    justify-content: center;
  }
}

.email-link {
  color: #000;
  font-size: 28px;
  transition: color 200ms;
}

.email-link-container:hover .email-link {
  transition: color 200ms;
  color: $primary-cyan;
}

.email-link-container:not(:hover) .email-link {
  transition: color 200ms;
  color: #000;
}

.icon {
  color: #000;
  font-size: 28px;
  transition: color 200ms;

  &:hover {
    color: $primary-cyan;
    cursor: pointer;
  }
}

.edit-icon {
  color: #000;
  transition: color 200ms;

  &:hover {
    color: $primary-cyan;
    cursor: pointer;
  }
}

.gc360-photo-dialog {
  display: grid;
  grid-template-rows: auto auto auto;
  &_title {
    grid-row: 1;
  }
  &_content {
    display: grid;
    grid-row: 2;
    grid-template-rows: auto auto auto auto;
    grid-row-gap: 10px;
    justify-items: center;
    &_text {
      grid-row: 1;
    }
    &_dropzone {
      transition: border-color 0.3s, background-color 0.3s, box-shadow 0.3s;
      width: 18rem;
      height: 18rem;
      display: flex;
      border-style: dashed;
      border-width: 0.2rem;
      border-radius: 1rem;
      border-color: darkgray;
      justify-content: center;
      align-items: center;
      &:hover {
        background-color: #dddddd;
        box-shadow: 0 0 0 0.25rem #dddddd;
      }
      &_img {
        border-radius: 0.5rem;
      }
    }
    &_cropper {
      grid-row: 2;
    }
    &_button {
      grid-row: 3;
    }
  }
  &_actions-top {
    grid-row: 3;
    &_actions-bottom {
      grid-row: 4;
    }
  }
}

@media (min-width: $break-sm) {
  .profile-image {
    position: 'relative';
    opacity: 1;
    background-color: 'black';
    height: 200;
    width: 200;
    .tile-bar {
      transition: opacity 0.3s;
      opacity: 0; // make tile bar only visible on hover
      border-radius: 0 0 0.5rem 0.5rem;
      height: 64px;
      background: transparentize(
        $neutral-dark-gray,
        0.3
      ); // Make titles more readable over image background
      // Make space for a two-line title
      text-align: center;
    }
    &:hover {
      .tile-bar {
        opacity: 1;
      }
    }
  }
}
@media (min-width: 0px) {
  .profile-image {
    position: 'relative';
    opacity: 1;
    background-color: 'black';
    height: 200;
    width: 200;
  }
  .tile-bar {
    transition: none;
    opacity: 1;
    border-radius: 0 0 0.5rem 0.5rem;
    background: transparentize($neutral-dark-gray, 0.3);
    // Make titles more readable over image background
    height: 64px;
    // Make space for a two-line title
    text-align: center;
  }
}
.tooltip {
  background-color: $neutral-dark-gray !important;
}
@media (max-width: $break-sm) {
  .gc360-photo-dialog {
    &_content {
      &_dropzone {
        width: 10rem;
        height: 10rem;
      }
      &_cropper {
        padding-right: 20px;
      }
    }
  }
}

